# PULSE

./: .env.example  .gitignore  README.md  clean_w99.py  nixpacks.toml  pulse.py  pyproject.toml  railway.toml  regen.sh  render_w25.py  test_e2e_live.py  test_fetch.py  test_lang.py  test_mcp_direct.py  test_mcp_tools.py
.github/workflows/: pulse_cron.yml  weekly-pulse.yml
config/: products.yaml
data/reports/groww/: 2026-W23.json  2026-W24.json  2026-W25.json
data/reports/indmoney/: 2026-W23.json  2026-W24.json  (+2 more)
docs/: EdgeCases.md  ImplementationPlan.md  ProblemStatement.md  architecture.md  problemStatment.txt
frontend/: Dockerfile  index.html  package-lock.json  package.json  screenshot.js
frontend/src/: App.jsx  index.css
scripts/: generate_theme_map.py
src/: cli.py  models.py  normalize.py  orchestrator.py  pii.py
src/config/: loader.py
src/delivery/: mcp_client.py  mocks.py
src/ingestion/: app_store.py  base.py  play_store.py  reddit.py
src/reasoning/: cluster.py  dedupe.py  summarize.py  theme_identity.py  trends.py  validate.py
src/render/: builder.py
src/state/: ledger.py
stitch_review_pulse_dashboard/insight_kinetic/: DESIGN.md
stitch_review_pulse_dashboard/review_pulse_full_report_view/: code.html
stitch_review_pulse_dashboard/review_pulse_refined_overview/: code.html
stitch_review_pulse_dashboard/review_pulse_themes_deep_dive/: code.html
stitch_review_pulse_dashboard/review_pulse_trends_heatmap/: code.html
tests/: test_delivery.py  test_models.py  test_normalize.py  test_orchestrator.py  test_pii.py  test_validate.py
(+45 files in other folders)
